vm_tools: update to Rust 2021
BUG=b:340333088
TEST=cargo clippy

Change-Id: Ibf9685dd95705eb78b17b24b5111e2b124281feb
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5536329
Reviewed-by: Dmitry Torokhov <dtor@chromium.org>
Tested-by: Daniel Verkamp <dverkamp@chromium.org>
Commit-Queue: Daniel Verkamp <dverkamp@chromium.org>

--- a/vm_tools/chunnel/system_api/Cargo.toml
+++ b/vm_tools/chunnel/system_api/Cargo.toml
@@ -3,6 +3,7 @@ name = "system_api"
 version = "0.1.0"
 authors = ["The ChromiumOS Authors"]
 build = "build.rs"
+edition = "2021"
 
 [dependencies]
 protobuf = "3.2"
