--- a/vm_tools/host/BUILD.gn
+++ b/vm_tools/host/BUILD.gn
@@ -6,14 +6,14 @@ import("//common-mk/pkg_config.gni")
 
 group("host") {
   deps = [
-    ":cicerone_client",
     ":maitred_client",
     ":seneschal",
     ":seneschal_client",
-    ":vm_cicerone",
     ":vmlog_forwarder",
     ":vsh",
     "//vm_tools:vshd",
+    "//vm_tools/cicerone:cicerone_client",
+    "//vm_tools/cicerone:vm_cicerone",
     "//vm_tools/concierge",
   ]
   if (use.arcvm) {
@@ -21,9 +21,9 @@ group("host") {
   }
   if (use.test) {
     deps += [
-      ":cicerone_test",
       ":syslog_forwarder_test",
       ":vsh_test",
+      "//vm_tools/cicerone:cicerone_test",
       "//vm_tools/concierge:concierge_test",
     ]
     if (use.arcvm) {
@@ -32,8 +32,8 @@ group("host") {
   }
   if (use.fuzzer) {
     deps += [
-      ":cicerone_container_listener_fuzzer",
       ":vsh_client_fuzzer",
+      "//vm_tools/cicerone:cicerone_container_listener_fuzzer",
     ]
   }
 }
@@ -137,47 +137,6 @@ executable("vsh") {
   deps = [ ":libvsh-client" ]
 }
 
-static_library("libcicerone") {
-  sources = [
-    "../cicerone/container.cc",
-    "../cicerone/container_listener_impl.cc",
-    "../cicerone/crash_listener_impl.cc",
-    "../cicerone/grpc_util.cc",
-    "../cicerone/guest_metrics.cc",
-    "../cicerone/service.cc",
-    "../cicerone/shadercached_helper.cc",
-    "../cicerone/shill_client.cc",
-    "../cicerone/tremplin_listener_impl.cc",
-    "../cicerone/virtual_machine.cc",
-  ]
-  configs += [ ":host_target_defaults" ]
-  libs = [ "grpc" ]
-  all_dependent_pkg_deps = [
-    "grpc++",
-    "libmetrics",
-    "libshill-client",
-    "protobuf",
-    "re2",
-    "system_api",
-    "vm_protos",
-  ]
-}
-
-executable("vm_cicerone") {
-  sources = [ "../cicerone/main.cc" ]
-  configs += [ ":host_target_defaults" ]
-  deps = [ ":libcicerone" ]
-}
-
-executable("cicerone_client") {
-  sources = [ "../cicerone/client.cc" ]
-  configs += [ ":host_target_defaults" ]
-  pkg_deps = [
-    "protobuf",
-    "system_api",
-  ]
-}
-
 if (use.arcvm) {
   static_library("libvm_pstore_dump") {
     sources = [ "../pstore_dump/persistent_ram_buffer.cc" ]
@@ -217,21 +176,6 @@ executable("seneschal_client") {
   ]
 }
 
-if (use.test || use.fuzzer) {
-  static_library("service_testing_helper_lib") {
-    sources = [
-      "../cicerone/dbus_message_testing_helper.cc",
-      "../cicerone/dbus_message_testing_helper.h",
-      "../cicerone/mock_tremplin_stub.h",
-      "../cicerone/service_testing_helper.cc",
-      "../cicerone/service_testing_helper.h",
-    ]
-    configs += [ ":host_target_defaults" ]
-    all_dependent_pkg_deps = [ "libchrome-test" ]
-    deps = [ ":libcicerone" ]
-  }
-}
-
 if (use.test) {
   executable("syslog_forwarder_test") {
     sources = [
@@ -248,24 +192,6 @@ if (use.test) {
       ":libforwarder",
       "//common-mk/testrunner:testrunner",
       "//vm_tools:libvm_tools_common",
-    ]
-  }
-
-  executable("cicerone_test") {
-    sources = [
-      "../cicerone/container_listener_impl_test.cc",
-      "../cicerone/crash_listener_impl_test.cc",
-      "../cicerone/tremplin_listener_impl_test.cc",
-      "../cicerone/virtual_machine_test.cc",
-    ]
-    configs += [
-      "//common-mk:test",
-      ":host_target_defaults",
-    ]
-    deps = [
-      ":libcicerone",
-      ":service_testing_helper_lib",
-      "//common-mk/testrunner:testrunner",
     ]
   }
 
@@ -304,25 +230,6 @@ if (use.fuzzer) {
       "libprotobuf-mutator",
       "protobuf",
       "vm_protos",
-    ]
-  }
-  executable("cicerone_container_listener_fuzzer") {
-    sources = [ "../cicerone/container_listener_impl_fuzzer.cc" ]
-
-    # //common-mk:test should be on the top.
-    # TODO(crbug.com/887845): Remove this comment after library ordering issue is fixed.
-    configs += [
-      "//common-mk:test",
-      "//common-mk/common_fuzzer:common_fuzzer",
-      ":vm_host_tools_fuzzer_pkg_deps",
-    ]
-    pkg_deps = [
-      "grpc++",
-      "libchrome-test",  # For FuzzedDataProvider
-    ]
-    deps = [
-      ":libcicerone",
-      ":service_testing_helper_lib",
     ]
   }
 
