heartd: Use sheriff framework to verify heartbeat
This is a migration work.

BUG=none
TEST=FEATURES=test emerge-rex heartd
TEST=manual run on DUT

Change-Id: I3a81e2e2a6e91e3ba9e260df458f77738973e9a6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5529124
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>
Tested-by: Kerker Yang <kerker@chromium.org>

--- a/heartd/daemon/sheriffs/BUILD.gn
+++ b/heartd/daemon/sheriffs/BUILD.gn
@@ -12,13 +12,20 @@ pkg_config("target_defaults") {
 }
 
 source_set("sheriffs") {
-  sources = [ "boot_metrics_recorder.cc" ]
+  sources = [
+    "boot_metrics_recorder.cc",
+    "heartbeat_verifier.cc",
+  ]
   configs += [ ":target_defaults" ]
+  deps = [ "//heartd/mojom:libheartd_mojo_bindings" ]
 }
 
 if (use.test) {
   source_set("sheriffs_test") {
-    sources = [ "boot_metrics_recorder_test.cc" ]
+    sources = [
+      "boot_metrics_recorder_test.cc",
+      "heartbeat_verifier_test.cc",
+    ]
     configs += [
       "//common-mk:test",
       ":target_defaults",
