--- a/vm_tools/concierge/BUILD.gn
+++ b/vm_tools/concierge/BUILD.gn
@@ -27,6 +27,7 @@ static_library("libconcierge") {
     "dbus_proxy_util.cc",
     "disk_image.cc",
     "dlc_helper.cc",
+    "feature_util.cc",
     "metrics/duration_recorder.cc",
     "mm/balloon.cc",
     "mm/balloon_blocker.cc",
@@ -143,6 +144,7 @@ if (use.test) {
       "balloon_policy_test.cc",
       "dlc_helper_test.cc",
       "fake_crosvm_control.cc",
+      "feature_util_test.cc",
       "metrics/duration_recorder_test.cc",
       "mm/balloon_blocker_test.cc",
       "mm/balloon_broker_test.cc",
