missive: Separate KeyDelivery from StorageBase
This refactoring does not change functionality, except for simplifying
uploader call by KeyDelivery class (it no longer needs to refer
HealthModule and so QueueUploaderInterface becomes redundant; instead it
goes with generic UploaderInterface).

Added unittests for KeyDelivery specifically instead of testing it as
part of Storage class (not removed from Storage tests yet!)

BUG=b:273999723
TEST=cros_sdk cros_workon_make --board=${BOARD} missive --test
TEST=Manual VM test

Change-Id: I886748252c34a34e0855262c8051dc8c7d7e71d7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5539070
Tested-by: Leonid Baraz <lbaraz@chromium.org>
Reviewed-by: Josh Hilke <jrhilke@google.com>
Commit-Queue: Josh Hilke <jrhilke@google.com>
Auto-Submit: Leonid Baraz <lbaraz@chromium.org>

--- a/missive/BUILD.gn
+++ b/missive/BUILD.gn
@@ -200,6 +200,7 @@ if (use.test) {
       "scheduler/enqueue_job_test.cc",
       "scheduler/scheduler_test.cc",
       "scheduler/upload_job_test.cc",
+      "storage/key_delivery_test.cc",
       "storage/legacy_storage_degradation_test.cc",
       "storage/legacy_storage_test.cc",
       "storage/storage_degradation_test.cc",
