--- a/typecd/init/typecd.conf
+++ b/typecd/init/typecd.conf
@@ -20,5 +20,14 @@ oom score -100
 # so set a limit for 5x that.
 limit as 100000000 unlimited
 
-exec minijail0 --config /usr/share/minijail/typecd.conf \
-  -- /usr/bin/typecd
+script
+  args=""
+
+  # Only bind the thunderbolt bus if it exists.
+  if [ -d "/sys/bus/thunderbolt" ]; then
+    args="${args} -b /sys/bus/thunderbolt"
+  fi
+
+  exec minijail0 --config /usr/share/minijail/typecd.conf \
+    ${args} -- /usr/bin/typecd
+end script
