--- a/tpm_manager/server/tmpfiles.d/tpm_manager.conf
+++ b/tpm_manager/server/tmpfiles.d/tpm_manager.conf
@@ -8,4 +8,5 @@ d= /var/lib/tpm_manager 0755 tpm_manager tpm_manager
 Z= /var/lib/tpm_manager - tpm_manager tpm_manager
 d= /mnt/stateful_partition/unencrypted/tpm_manager 0755 tpm_manager tpm_manager
 Z= /mnt/stateful_partition/unencrypted/tpm_manager - tpm_manager tpm_manager
-z= /sys/class/tpm/tpm0/ppi/request - tpm_manager tpm_manager
+z= /sys/class/tpm/tpm0/ppi/request - tpm_manager root
+z= /sys/class/tpm/tpm0/ppi/tcg_operations
