crash: add substate_requirements to kernel-suspend-warning reports
This will help simplify debugging a bit so we don't need to go track
down the contents of the file on the relevant device.

Conditionally add the appropriate flags to minijail to mount just
/sys/kernel/debug/pmc_core (if available). Then update the
kernel-suspend-warning logs to include
/sys/kernel/debug/pmc_core/substate_requirements.

BUG=b:310083743
TEST=on a brya device, instrument kernel to warn on every resume:
     (checkout) git diff drivers/platform/chrome/cros_ec.c
        diff --git a/drivers/platform/chrome/cros_ec.c b/drivers/platform/chrome/cros_ec.c
        index 4689caa3ba39..4cc8e6b3bba4 100644
        --- a/drivers/platform/chrome/cros_ec.c
        +++ b/drivers/platform/chrome/cros_ec.c
        @@ -428,6 +428,7 @@ static int cros_ec_send_resume_event(struct cros_ec_device *ec_dev)
         void cros_ec_resume_complete(struct cros_ec_device *ec_dev)
         {
                cros_ec_send_resume_event(ec_dev);
        +       WARN(1, "EC detected sleep transition timeout. (just kidding)");
         }
         EXPORT_SYMBOL(cros_ec_resume_complete);
     Then build a new image with these changes and deploy to a DUT.
     (dut) stop anomaly-detector; start anomaly-detector TESTONLY_SEND_ALL=--testonly_send_all
     (dut) rm /var/spool/crash/*
     (dut) powerd_dbus_suspend --suspend_for_sec=10
     (dut) egrep "just kidding|--kernel_suspend_warning" /var/log/messages
        WARNING kernel: [   66.503245] EC detected sleep transition timeout. (just kidding)
        INFO anomaly_detector[4945]: anomaly_detector invoking crash_reporter with --kernel_suspend_warning --weight=10
     (dut) zcat /var/spool/crash/kernel_suspend_warning_cros_ec_resume_complete*.log.gz | grep ===substate_requirements===
        ===substate_requirements===
     ***THEN*** on a _kukui_ device (or any other without
     /sys/kernel/debug/pmc_core), make sure the changes to
     anomaly-detector.conf don't break 

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -349,7 +349,12 @@ kernel-suspend-warning=\
     echo "===$f (tail) ==="; \
     tail -20 $f; \
     echo EOF; \
-  done
+  done; \
+  if [ -e /sys/kernel/debug/pmc_core/substate_requirements ]; then \
+    echo "===substate_requirements==="; \
+    cat /sys/kernel/debug/pmc_core/substate_requirements; \
+    echo EOF; \
+  fi
 
 # Collect the suspend log which is in the dmesg buffer. Compress it in
 # KernelWarningCollector.
