--- a/crash-reporter/init/anomaly-detector.conf
+++ b/crash-reporter/init/anomaly-detector.conf
@@ -30,6 +30,7 @@ limit as 600000000 unlimited
 #   TODO: We should mount just /var/spool/crash.
 # /var/lib/metrics: We write out uma stats directly.
 # /sys: Some kernel detectors will read PCI device information.
+# /sys/kernel/debug/pmc_core: For kernel detectors for suspend failures.
 # /run/crash_reporter: We need to indicate runtime state.
 # /run/dbus: We need to talk to dbus.
 # /run/metrics: crash_reporter needs to read metrics consent state.
@@ -48,25 +49,33 @@ env UMA_CONSENT='/run/daemon-store/uma-consent'
 # TODO(chromium:1193485) remove this dir on 2024-01-30
 env APPS_CONSENT='/run/daemon-store/appsync-consent'
 env APPS_OPTIN='/run/daemon-store/appsync-optin'
-exec /sbin/minijail0 \
-  --no-default-runtime-environment \
-  -T static \
-  --profile=minimalistic-mountns \
-  --no-fs-restrictions \
-  -Kslave \
-  -i -N -p -v -r --uts -l -g syslog \
-  --mount-dev -b /dev/log \
-  -b /sys \
-  -k '/var,/var,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M' \
-  -b /var/log -b /var/spool,,1 -b /var/lib/metrics,,1 \
-  -b /var/lib/devicesettings \
-  -k '/run,/run,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M' \
-  -b /run/crash_reporter,,1 \
-  -b /run/dbus \
-  -b /home/chronos \
-  -b /run/metrics \
-  -k '/run/daemon-store/crash,/run/daemon-store/crash,none,MS_BIND|MS_REC' \
-  -k "${UMA_CONSENT},${UMA_CONSENT},none,MS_BIND|MS_REC|MS_RDONLY" \
-  -k "${APPS_CONSENT},${APPS_CONSENT},none,MS_BIND|MS_REC|MS_RDONLY" \
-  -k "${APPS_OPTIN},${APPS_OPTIN},none,MS_BIND|MS_REC|MS_RDONLY" \
-  -- /usr/bin/anomaly_detector $TESTONLY_SEND_ALL
+script
+  PMC_CORE_ARGS=""
+  if [ -d /sys/kernel/debug/pmc_core ]; then
+    PMC_CORE_ARGS="${PMC_CORE_ARGS} -k tmpfs,/sys/kernel/debug,tmpfs"
+    PMC_CORE_ARGS="${PMC_CORE_ARGS} -b /sys/kernel/debug/pmc_core"
+  fi
+  exec /sbin/minijail0 \
+    --no-default-runtime-environment \
+    -T static \
+    --profile=minimalistic-mountns \
+    --no-fs-restrictions \
+    -Kslave \
+    -i -N -p -v -r --uts -l -g syslog \
+    --mount-dev -b /dev/log \
+    -b /sys \
+    ${PMC_CORE_ARGS} \
+    -k '/var,/var,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M' \
+    -b /var/log -b /var/spool,,1 -b /var/lib/metrics,,1 \
+    -b /var/lib/devicesettings \
+    -k '/run,/run,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M' \
+    -b /run/crash_reporter,,1 \
+    -b /run/dbus \
+    -b /home/chronos \
+    -b /run/metrics \
+    -k '/run/daemon-store/crash,/run/daemon-store/crash,none,MS_BIND|MS_REC' \
+    -k "${UMA_CONSENT},${UMA_CONSENT},none,MS_BIND|MS_REC|MS_RDONLY" \
+    -k "${APPS_CONSENT},${APPS_CONSENT},none,MS_BIND|MS_REC|MS_RDONLY" \
+    -k "${APPS_OPTIN},${APPS_OPTIN},none,MS_BIND|MS_REC|MS_RDONLY" \
+    -- /usr/bin/anomaly_detector $TESTONLY_SEND_ALL
+end script
