libbrillo: Add userdb methods to get users and groups
Add functions to get vector of uids and vector of gids present
on the device.

These APIs are used in this spaced CL:
https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5569529

BUG=b:338092935
TEST=dbus-send --system --print-reply --dest=org.chromium.Spaced
 /org/chromium/Spaced org.chromium.Spaced.GetQuotaOverallUsagePrettyPrint
 string:"/mnt/stateful_partition/"

Change-Id: Ibf8dc34fa9e37b31fd0564c1dd0f3ff70baa2209
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5541733
Commit-Queue: Alexis Savery <asavery@chromium.org>
Tested-by: Alexis Savery <asavery@chromium.org>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>

--- a/libbrillo/BUILD.gn
+++ b/libbrillo/BUILD.gn
@@ -554,6 +554,7 @@ if (use.test) {
       "brillo/tracing_test.cc",
       "brillo/unittest_utils.cc",
       "brillo/url_utils_test.cc",
+      "brillo/userdb_utils_test.cc",
       "brillo/vcsid_set_test.cc",
       "brillo/vcsid_unset_test.cc",
       "testrunner.cc",
