hammerd: update metrics info
Update the metric info file for Roach keyboard

BUG=none
TEST=pass faft hammerd.TriggeredOnBoot

Change-Id: I7bfb0efcd25b0da3ab7a25f2d99e7448b28a91e8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5541513
Reviewed-by: Fei Shao <fshao@chromium.org>
Commit-Queue: Ting Shen <phoenixshen@chromium.org>
Tested-by: Ting Shen <phoenixshen@chromium.org>

--- a/hammerd/init/hammerd.conf
+++ b/hammerd/init/hammerd.conf
@@ -123,8 +123,10 @@ script
   path_arg=
   if [ -n "${USB_PATH}" ]; then
     path_arg="--usb_path=${USB_PATH}"
+    device_path="/sys/bus/usb/devices/${USB_PATH}"
   else
     path_arg="--i2c_path=${I2C_PATH}"
+    device_path="/sys/bus/i2c/devices/${I2C_PATH}"
   fi
 
   exit_status=0
@@ -139,8 +141,7 @@ script
                        --update_if="${UPDATE_IF}" || exit_status="$?"
 
   if [ "${exit_status}" -eq 0 ]; then
-    usb_device_path="/sys/bus/usb/devices/${USB_PATH}"
-    if ! echo "${usb_device_path}" > "${WRITE_SYSFS_PATH}"; then
+    if ! echo "${device_path}" > "${WRITE_SYSFS_PATH}"; then
       logger -t ${UPSTART_JOB} \
           "FAILED to write into sysfs tag file: ${WRITE_SYSFS_PATH}"
       exit 1  # Exit status for "unknown error" in hammerd.
