u2fd: Add global user secret credential type
Add a type of credential that is just like the legacy credential, but
user_secret is to set to a global constant (all zero) instead of using
the secret value from daemon store. Enablement of this feature is
guarded behind a flag.

BUG=b:270525147
TEST=u2fd unittests

Change-Id: Ic1b3b86579f3b1ab1fab701973072433569b88c5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5546865
Commit-Queue: Howard Yang <hcyang@google.com>
Tested-by: Howard Yang <hcyang@google.com>
Reviewed-by: Yi Chou <yich@google.com>

--- a/u2fd/init/u2fd.conf
+++ b/u2fd/init/u2fd.conf
@@ -33,6 +33,7 @@ script
   force_enabled disable_corp_protocol && \
     ARGS="${ARGS} --force_disable_corp_protocol"
   force_enabled activate_fips && ARGS="${ARGS} --force_activate_fips"
+  force_enabled enable_global_key && ARGS="${ARGS} --force_enable_global_key"
   force_enabled verbose && ARGS="${ARGS} --verbose"
 
   TCSD_ARGS=""
