privacy: install privacy header from BUILD.gn
BUG=b:329272324
TEST=CQ

Change-Id: Ibd348fac4cf606f9fb342d768c306bf864f3b607
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5541738
Tested-by: Avan Rathod <avanrathod@google.com>
Commit-Queue: Avan Rathod <avanrathod@google.com>
Reviewed-by: Allen Webb <allenwebb@google.com>

--- a/privacy/BUILD.gn
+++ b/privacy/BUILD.gn
@@ -3,7 +3,10 @@
 # found in the LICENSE file.
 import("//common-mk/pkg_config.gni")
 group("all") {
-  deps = [ ":libprivacy" ]
+  deps = [
+    ":install_privacy_headers",
+    ":libprivacy",
+  ]
   if (use.test) {
     deps += [ ":privacy_test_runner" ]
   }
@@ -19,6 +22,11 @@ shared_library("libprivacy") {
   include_dirs = [ "." ]
   public_configs = [ ":target_defaults" ]
   deps = [ ":libprivacy_pc" ]
+}
+
+install_config("install_privacy_headers") {
+  sources = [ "log.h" ]
+  install_path = "/usr/include/privacy"
 }
 
 generate_pkg_config("libprivacy_pc") {
