permission_broker: call primary_io_manager before processing device
on chromebox devices, we need to check if a USB device is being blocked
by primary_io_manager before looking into any other logic.

BUG=b:308434587
TEST=unit tests
TEST=deploy to DUT and check against primary_io_manager changes

Cq-Depend: 5542885
Change-Id: Ic0f5be2a9bec56a6431db2175f086621d3b79ef0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5542940
Commit-Queue: maciek swiech <drmasquatch@google.com>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>
Tested-by: maciek swiech <drmasquatch@google.com>

--- a/permission_broker/BUILD.gn
+++ b/permission_broker/BUILD.gn
@@ -31,6 +31,7 @@ pkg_config("target_defaults_deps") {
     "libcros_config",
     "libnet-base",
     "libpatchpanel-client",
+    "libprimary_io_manager-client",
     "libudev",
     "libusb-1.0",
   ]
@@ -98,6 +99,7 @@ if (use.test) {
     pkg_deps = [
       "libbrillo-test",
       "libchrome-test",
+      "libprimary_io_manager-client-test",
     ]
   }
   executable("permission_broker_test") {
