spaced: Add D-Bus activation
Allow spaced to be activated via D-Bus. This CL:

1) Adds D-Bus service activation configuration
2) Adds post-start stanza to spaced to wait for the D-Bus
interface to be claimed before declared the service "started".
3) Switch out the stop condition to boot-services and only
allow D-Bus service activations if boot-services is running:
this ensures that D-Bus activated services will be stopped
during the shutdown process.

BUG=b:340689392
TEST=stop spaced; spaced_cli --monitor, check for D-Bus
activation in /var/log/messages

Change-Id: I5d837917708ae7f691f95efd52269e12ce0e3749
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5542996
Tested-by: Sarthak Kukreti <sarthakkukreti@google.com>
Commit-Queue: Sarthak Kukreti <sarthakkukreti@google.com>
Reviewed-by: Brian Norris <briannorris@chromium.org>

--- a/spaced/BUILD.gn
+++ b/spaced/BUILD.gn
@@ -9,6 +9,7 @@ import("//common-mk/proto_library.gni")
 
 group("all") {
   deps = [
+    ":install_dbus_activation",
     ":install_dbus_config",
     ":install_headers",
     ":install_init",
@@ -104,6 +105,11 @@ executable("spaced_cli") {
 install_config("install_dbus_config") {
   sources = [ "dbus_bindings/org.chromium.Spaced.conf" ]
   install_path = "dbus_system_d"
+}
+
+install_config("install_dbus_activation") {
+  sources = [ "dbus/org.chromium.Spaced.service" ]
+  install_path = "dbus_system_services"
 }
 
 install_config("install_init") {
