vm_tools: seneschal: Move out seneschal rules to its own file
Instead of having one large host file, put BUILD.gn rule nearby
seneschal.

BUG=b:340352510
TEST=cq

Change-Id: I7b26047ee3acc1811fc9b387c22d9d5ebac85922
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5541436
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Tested-by: Yuan Yao <yuanyaogoog@chromium.org>
Commit-Queue: Yuan Yao <yuanyaogoog@chromium.org>

--- a/vm_tools/host/BUILD.gn
+++ b/vm_tools/host/BUILD.gn
@@ -7,14 +7,14 @@ import("//common-mk/pkg_config.gni")
 group("host") {
   deps = [
     ":maitred_client",
-    ":seneschal",
-    ":seneschal_client",
     ":vmlog_forwarder",
     ":vsh",
     "//vm_tools:vshd",
     "//vm_tools/cicerone:cicerone_client",
     "//vm_tools/cicerone:vm_cicerone",
     "//vm_tools/concierge",
+    "//vm_tools/seneschal",
+    "//vm_tools/seneschal:seneschal_client",
   ]
   if (use.arcvm) {
     deps += [ ":vm_pstore_dump" ]
@@ -149,31 +149,6 @@ if (use.arcvm) {
     configs += [ ":host_target_defaults" ]
     deps = [ ":libvm_pstore_dump" ]
   }
-}
-
-static_library("libseneschal") {
-  sources = [ "../seneschal/service.cc" ]
-  configs += [ ":host_target_defaults" ]
-  all_dependent_pkg_deps = [
-    "libminijail",
-    "protobuf",
-    "system_api",
-  ]
-}
-
-executable("seneschal") {
-  sources = [ "../seneschal/main.cc" ]
-  configs += [ ":host_target_defaults" ]
-  deps = [ ":libseneschal" ]
-}
-
-executable("seneschal_client") {
-  sources = [ "../seneschal/client.cc" ]
-  configs += [ ":host_target_defaults" ]
-  pkg_deps = [
-    "protobuf",
-    "system_api",
-  ]
 }
 
 if (use.test) {
