vm_tools: vsh: Move out vsh rules to its own file
Instead of having one large host file, put BUILD.gn rule nearby vsh.

BUG=b:340352510
TEST=cq

Change-Id: Idbb437bb3014b41f8f52483ed0d8cd7b1ca28794
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5541437
Tested-by: Yuan Yao <yuanyaogoog@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Commit-Queue: Yuan Yao <yuanyaogoog@chromium.org>

--- a/vm_tools/guest/BUILD.gn
+++ b/vm_tools/guest/BUILD.gn
@@ -14,7 +14,7 @@ group("guest") {
     ":port_listener",
     ":upgrade_container",
     ":vm_syslog",
-    "//vm_tools:vshd",
+    "//vm_tools/vsh:vshd",
   ]
   if (!use.fuzzer) {
     # Exclude notificationd and the demos from fuzzer builds since they
