mojo_service_manager: Add non_const_ref for mojo type_mappings
`non_const_ref` field is required for type_mappings after CL:5527832
provided this option.

BUG=b:340134926
TEST=FEATURES=test emerge-volteer mojo_service_manager

Change-Id: I6daea39c11e7c5ee8d826bd7ef01046507f6f9c6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5540035
Tested-by: Byron Lee <byronlee@chromium.org>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Commit-Queue: Byron Lee <byronlee@chromium.org>

--- a/mojo_service_manager/lib/mojom/type_mappings.json
+++ b/mojo_service_manager/lib/mojom/type_mappings.json
@@ -12,6 +12,7 @@
       "force_serialize": false,
       "move_only": false,
       "nullable_is_same_type": false,
+      "non_const_ref": false,
       "non_copyable_non_movable": false,
       "public_headers": [
         "base/time/time.h"
