modemfwd: split ModemFlasher
TryFlash moves out, into the main function of FlashTask.
Then promote the flashing sub-steps to public ModemFlasher
methods.

BUG=b:315488486
TEST=unit tests, manual testing of normal and force flashing
  on EM060, FM350, and L850-GL

Change-Id: I9fa10953045ec2a8473b06ce1b40e1a7fbe89d19
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5545684
Reviewed-by: Andrew Lassalle <andrewlassalle@chromium.org>
Reviewed-by: Daniel Winkler <danielwinkler@google.com>
Tested-by: Eric Caruso <ejcaruso@chromium.org>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>
Reviewed-by: Ujjwal Pande <ujjwalpande@google.com>

--- a/modemfwd/BUILD.gn
+++ b/modemfwd/BUILD.gn
@@ -70,6 +70,7 @@ static_library("libmodemfw") {
     "firmware_directory.cc",
     "firmware_file.cc",
     "firmware_manifest_v2.cc",
+    "flash_task.cc",
     "heartbeat_task.cc",
     "journal.cc",
     "logging.cc",
@@ -132,6 +133,7 @@ if (use.test) {
       "firmware_directory_stub.cc",
       "firmware_directory_test.cc",
       "firmware_file_test.cc",
+      "flash_task_test.cc",
       "heartbeat_task_test.cc",
       "journal_test.cc",
       "metrics_test.cc",
