--- a/smbfs/mojom/type_mappings.json
+++ b/smbfs/mojom/type_mappings.json
@@ -12,6 +12,7 @@
       "force_serialize": false,
       "move_only": true,
       "nullable_is_same_type": false,
+      "non_const_ref": false,
       "non_copyable_non_movable": false,
       "public_headers": [
         "libpasswordprovider/password.h"
@@ -29,6 +30,7 @@
       "force_serialize": false,
       "move_only": false,
       "nullable_is_same_type": false,
+      "non_const_ref": false,
       "non_copyable_non_movable": false,
       "public_headers": [
         "base/files/file_path.h"
