vm_tools: Move out guest_service_failure_notifier rules into its own file
Instead of having large guest BUILD.gn file, put BUILD.gn rule nearby
guest_service_failure_notifier.

BUG=b:340352510
TEST=cq

Change-Id: I271beafc79b32650ca6e125c164fcc5451805856
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5547185
Commit-Queue: Yuan Yao <yuanyaogoog@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Tested-by: Yuan Yao <yuanyaogoog@chromium.org>

--- a/vm_tools/guest/BUILD.gn
+++ b/vm_tools/guest/BUILD.gn
@@ -8,12 +8,12 @@ import("../sommelier/wayland_protocol.gni")
 
 group("guest") {
   deps = [
-    ":guest_service_failure_notifier",
     ":maitred",
     ":port_listener",
     ":upgrade_container",
     ":vm_syslog",
     "//vm_tools/garcon",
+    "//vm_tools/guest_service_failure_notifier",
     "//vm_tools/vsh:vshd",
   ]
   if (!use.fuzzer) {
@@ -87,16 +87,6 @@ executable("maitred") {
   deps = [
     ":libmaitred",
     "//vm_tools:libvm_tools_common",
-  ]
-}
-
-executable("guest_service_failure_notifier") {
-  sources = [ "../guest_service_failure_notifier/main.cc" ]
-  configs += [ ":target_defaults" ]
-  pkg_deps = [
-    "grpc++",
-    "protobuf",
-    "vm_protos",
   ]
 }
 
