vm_tools: port_listener: Move out port_listener rules into its own file
Instead of having large guest BUILD.gn file, put BUILD.gn rule nearby
port_listener.

BUG=b:340352510
TEST=cq

Change-Id: I72332a3d8dbb846d4b95b9942337d35e36b0bbe7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5547186
Commit-Queue: Yuan Yao <yuanyaogoog@chromium.org>
Tested-by: Yuan Yao <yuanyaogoog@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>

--- a/vm_tools/guest/BUILD.gn
+++ b/vm_tools/guest/BUILD.gn
@@ -2,18 +2,17 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//common-mk/ebpf_gen.gni")
 import("//common-mk/pkg_config.gni")
 import("../sommelier/wayland_protocol.gni")
 
 group("guest") {
   deps = [
     ":maitred",
-    ":port_listener",
     ":upgrade_container",
     ":vm_syslog",
     "//vm_tools/garcon",
     "//vm_tools/guest_service_failure_notifier",
+    "//vm_tools/port_listener",
     "//vm_tools/vsh:vshd",
   ]
   if (!use.fuzzer) {
@@ -94,30 +93,6 @@ executable("vm_syslog") {
   sources = [ "../syslog/main.cc" ]
   configs += [ ":target_defaults" ]
   deps = [ ":libsyslog" ]
-}
-
-generate_vmlinux("vmlinux_h") {
-  vmlinux_out_dir = "include/vm_tools/port_listener/vmlinux"
-  btf_out_dir = "bpf"
-}
-
-generate_ebpf_skeletons("ebpf_listen_tracker") {
-  sources = [ "../port_listener/listen_tracker.ebpf.c" ]
-  bpf_skeleton_out_dir = "include/vm_tools/port_listener/bpf/generated"
-  btf_inout_dir = "bpf"
-  deps = [ ":vmlinux_h" ]
-}
-
-executable("port_listener") {
-  sources = [ "../port_listener/main.cc" ]
-  configs += [ ":target_defaults" ]
-  pkg_deps = [
-    "grpc++",
-    "libbpf",
-    "protobuf",
-    "vm_protos",
-  ]
-  deps = [ ":ebpf_listen_tracker" ]
 }
 
 if (!use.fuzzer) {
